--- a/components/hotel-module/main/src/main/AndroidManifest.xml
+++ b/components/hotel-module/main/src/main/AndroidManifest.xml
@@ -12,18 +12,19 @@
         tools:replace="android:name,android:allowBackup"
         android:icon="@mipmap/ic_launcher"
         >
-<!--        <activity-->
-<!--            android:name="com.jamesfchen.bundle1.HomeActivity"-->
-<!--            android:exported="true">-->
+        <activity
+            android:name="com.jamesfchen.bundle1.Bundle1Activity"
+            >
 <!--            <intent-filter>-->
 <!--                <action android:name="android.intent.action.MAIN" />-->
 
 <!--                <category android:name="android.intent.category.LAUNCHER" />-->
 <!--            </intent-filter>-->
-<!--        </activity>-->
+        </activity>
         <activity
-            android:name="com.jamesfchen.bundle1.Bundle1Activity"
-            >
+            android:name="com.jamesfchen.bundle2.Bundle2Activity"
+            android:theme="@style/Theme.SpacecraftAndroid.NoActionBar"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
