--- a/components/hotel-module/bundle2/src/main/AndroidManifest.xml
+++ b/components/hotel-module/bundle2/src/main/AndroidManifest.xml
@@ -60,12 +60,13 @@
         <activity android:name="com.jamesfchen.bundle2.launchmode.FirstActivity" />
         <activity android:name="com.jamesfchen.bundle2.launchmode.SecondaryActivity" />
         <activity android:name="com.jamesfchen.bundle2.launchmode.ThirdActivity" />
-        <!--        singleTask(Intent.FLAG_ACTIVITY_NEW_TASK or Intent.FLAG_ACTIVITY_CLEAR_TOP)：如果存在FourthActivity，则清除FourthActivity之上的Activity并且推至顶部-->
+        <!--        singleTask(Intent.FLAG_ACTIVITY_NEW_TASK or Intent.FLAG_ACTIVITY_CLEAR_TOP)：
+                    如果存在FourthActivity，则清除FourthActivity之上的Activity并且推至顶部-->
         <!--            android:launchMode="singleTask" -->
         <activity android:name="com.jamesfchen.bundle2.launchmode.FourthActivity" />
         <activity
             android:name=".carousel.PagerViewActivity"
-            android:theme="@style/Theme.AppCompat"
+            android:theme="@style/Theme.AppCompat.Light"
             android:exported="true" />
         <activity
             android:name=".carousel.ViewPagerActivity"
