add pulse widget

--- a/components/hotel-module/bundle2/src/main/AndroidManifest.xml
+++ b/components/hotel-module/bundle2/src/main/AndroidManifest.xml
@@ -71,6 +71,7 @@
         <activity
             android:name=".carousel.ViewPagerActivity"
             android:exported="true" />
+        <activity android:name=".pulse.PulseActivity"/>
     </application>
 
 </manifest>
