--- a/gradle.properties
+++ b/gradle.properties
@@ -18,8 +18,7 @@ kotlin.code.style=official
 android.debug.obsoleteApi=true
 -Djavax.net.ssl.trustStore=/path/to/truststore -Djavax.net.ssl.trustStorePassword=password
 android.injected.testOnly=false
-firebasePerformanceInstrumentationEnabled=false
-
+#firebasePerformanceInstrumentationEnabled=false
 
 applicationId=com.jamesfchen.spacecraft
 compileSdkVersion = 30
