--- a/build.gradle
+++ b/build.gradle
@@ -59,13 +59,16 @@ buildscript {
         classpath 'com.google.firebase:perf-plugin:1.4.0'
 //        classpath 'com.hawksjamesf.plugin:perf:1.0.0'
 //        classpath 'com.google.firebase:firebase-plugins:2.0.0'
-        classpath("com.tencent.matrix:matrix-gradle-plugin:0.6.0") { changing = true }
+        classpath ("com.tencent.matrix:matrix-gradle-plugin:${MATRIX_VERSION}") { changing = true }
         classpath 'com.google.firebase:firebase-appdistribution-gradle:2.1.2'
 //        classpath "com.uber:infer-plugin:0.7.4"
         classpath 'com.github.jamesfchen:lifecycle-plugin:1.0.0'
 
         classpath "com.alibaba:arouter-register:1.0.2"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
+
+//        classpath 'com.google.code.gson:gson:2.7'
+//        classpath  'com.google.gradle:osdetector-gradle-plugin:1.6.0'
     }
 }
 
