--- a/components/hotel-module/bundle2/build.gradle
+++ b/components/hotel-module/bundle2/build.gradle
@@ -8,4 +8,5 @@ android {
 }
 dependencies {
 //    implementation project(path: ':components:hotel-module:foundation')
+    implementation 'com.facebook.device.yearclass:yearclass:2.1.0'
 }
