--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,7 @@ buildscript {
 
 //        classpath 'com.google.code.gson:gson:2.7'
 //        classpath  'com.google.gradle:osdetector-gradle-plugin:1.6.0'
+        classpath "cn.hikyson.methodcanary:plugin:0.15.5"
     }
 }
 
