--- a/script/app_module.gradle
+++ b/script/app_module.gradle
@@ -1,9 +1,15 @@
 apply plugin: 'com.android.application'
 apply from: "${rootDir.path}/script/base_module.gradle"
-
+apply plugin: 'cn.hikyson.methodcanary.plugin'
+AndroidGodEye {
+    enableLifecycleTracer true
+    enableMethodTracer true
+//    instrumentationRuleFilePath "AndroidGodEye-MethodCanary.js"
+//    instrumentationRuleIncludeClassNamePrefix(["com/jamesfchen/loader"])
+}
 //apply plugin: "com.github.jamesfchen.lifecycle-plugin"
 apply plugin: 'com.google.firebase.appdistribution'
-apply plugin: 'com.google.firebase.firebase-perf'
+//apply plugin: 'com.google.firebase.firebase-perf'
 apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'com.google.gms.google-services'
 //apply plugin: 'com.tencent.buglyplugin'
@@ -142,6 +148,7 @@ configurations {
     sevenZipDependency
     all*.exclude group: 'com.google.guava', module: 'listenablefuture'
 //    all*.exclude group: "com.google.protobuf", module: "protobuf-javalite"
+//    all*.exclude group: 'com.squareup.leakcanary', module: 'leakcanary-analyzer'
 }
 dependencies {
     teenager("${project.path} app begin ========================================================================================")
@@ -163,16 +170,16 @@ dependencies {
 if (!removeUnusedResourcesV2Enable) {
     project.ext.unusedResourcesSet = new HashSet<String>()
 }
-apply plugin: 'com.tencent.matrix-plugin'
-matrix {
-
-    logLevel "D"
-
-    trace {
-        enable = true
-        baseMethodMapFile = "${project.projectDir}/matrixTrace/methodMapping.txt"
-        blackListFile = "${project.projectDir}/matrixTrace/blackMethodList.txt"
-    }
+//apply plugin: 'com.tencent.matrix-plugin'
+//matrix {
+//
+//    logLevel "D"
+//
+//    trace {
+//        enable = true
+//        baseMethodMapFile = "${project.projectDir}/matrixTrace/methodMapping.txt"
+//        blackListFile = "${project.projectDir}/matrixTrace/blackMethodList.txt"
+//    }
 //    removeUnusedResources {
 //        variant = "debug"
 //
@@ -197,7 +204,7 @@ matrix {
 //        zipAlignPath = "${android.getSdkDirectory().getAbsolutePath()}/build-tools/${android.getBuildToolsVersion()}/zipalign"
 //        ignoreResources = ["R.id.*", "R.bool.*", "R.layout.unused_layout"]
 //    }
-}
+//}
 
 project.tasks.whenTaskAdded {
     if (it.name?.equals("assembleDebug") || it.name?.equals("assembleRelease")) {
