--- a/components/home-module/main/src/main/AndroidManifest.xml
+++ b/components/home-module/main/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         >
         <activity
-            android:name="com.jamesfchen.myhome.SplashActivity"
+            android:name="com.jamesfchen.myhome.splash.SplashActivity"
             android:launchMode="singleTop"
             android:theme="@style/FullscreenTheme"
             android:windowSoftInputMode="adjustPan">
