monitor frame rate

--- a/components/hotel-module/foundation/build.gradle
+++ b/components/hotel-module/foundation/build.gradle
@@ -22,6 +22,6 @@ android {
 //    }
 }
 dependencies {
-    lintChecks project(path: ':components:hotel-module:hotel-lint')
-    lintPublish project(path: ':components:hotel-module:hotel-lint')
+//    lintChecks project(path: ':components:hotel-module:hotel-lint')
+//    lintPublish project(path: ':components:hotel-module:hotel-lint')
 }
