--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,8 +34,7 @@ stages:
 assembleDebug:
   stage: build
   script:
-    - ./gradlew buildBigApp
-    - ./gradlew appDistributionUploadRelease
+    - ./gradlew buildBigApp appDistributionUploadRelease
     - ./script/pgyer_upload.sh "${CI_PROJECT_DIR}/app/build/outputs/apk/release/app-release.apk" $PG_API_KEY $PG_APP_KEY ${CI_PROJECT_DIR}
     - ./gradlew reportMappingDebug  &&  ./gradlew reportSoDebug
     - ./gradlew counter
